<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pintia</string>
    <string name="titulo_principal">Centro de Estudios Vacceos Federico Wattenberg</string>
    <string name="header">%s</string>
    <string name="info">Sobre nosotros</string>
    <string name="map">Mapa</string>
    <string name="home">Ciudad de Pintia</string>
    <string name="gallery">Galería</string>
    <string name="quinanas">Las Quintanas</string>
    <string name="ruedas">Las Ruedas</string>
    <string name="muralla">La Muralla</string>
    <string name="asedio">Zona Asedio</string>
    <string name="settings">Configuración</string>
    <string name="tamButton">30dp</string>
    <string name="description">Descripción</string>
    <string name="request">Formulario</string>
    <string name="description_content">%s</string>
    <string name="more_info_title">Información Adicional</string>
    <string name="more_info_content">%s</string>
    <string name="challenges_title">Retos</string>
    <string name="challenges_content">%s</string>
    <string name="pozo">El Pozo</string>
    <string name="sigloI">Siglo I</string>
    <string name="sigloII">Siglo II</string>
    <string name="sigloIII">Siglo III</string>
    <string name="sigloIV">Siglo IV</string>
    <string name="lore">Lorem ipsum dolor sit amet, officia excepteur ex fugiat reprehenderit enim labore culpa sint ad nisi Lorem pariatur mollit ex esse exercitation amet. Nisi anim cupidatat excepteur officia. Reprehenderit nostrud nostrud ipsum Lorem est aliquip amet voluptate voluptate dolor minim nulla est proident. Nostrud officia pariatur ut officia. Sit irure elit esse ea nulla sunt ex occaecat reprehenderit commodo officia dolor Lorem duis laboris cupidatat officia voluptate. Culpa proident adipisicing id nulla nisi laboris ex in Lorem sunt duis officia eiusmod. Aliqua reprehenderit commodo ex non excepteur duis sunt velit enim. Voluptate laboris sint cupidatat ullamco ut ea consectetur et est culpa et culpa duis.</string>
    <string name="example_test">TEXTO DE EJEMPLO, DEBERÍA SER ESPAÑOL</string>
    <string name="info_description_title">titulo\n</string>
    <string name="info_description_content">titulo_contenido</string>
    <string name="info_more_info_title">more_info</string>
    <string name="info_more_info_content">more_info_contenido</string>
    <string name="info_challenges_title">retos</string>
    <string name="info_challenges_content">retos_contenido</string>
    <string name="visit_request_name">Nombre completo</string>
    <string name="visit_request_group_size">Tamaño del grupo</string>
    <string name="visit_request_group_size_hint">Seleccione un tamaño de grupo</string>
    <string name="visit_request_phone">Número de teléfono</string>
    <string name="visit_request_date">Fecha de la visita (dd/mm/yyyy)</string>
    <string name="visit_request_time">Hora de la visita (hh:mm) [opcional]</string>
    <string name="visit_request_submit_text">Solicitar visita</string>
    <string name="myUbi">Mi Ubicacion</string>
    <string name="ubiPintia">Pintia</string>
    <string name="comoLlegar">Como llegar</string>
    <string name="reservaAhora">Reserva Ahora</string>
    <string name="saltar">Saltar</string>
    <string name="sig">Siguiente</string>
    <string name="tut_marcador">Marcador de Seccion</string>
    <string name="tut_Leyenda">Leyenda</string>
    <string name="tut_camara">Inmortalizar el momento</string>
    <string name="tut_qr">Escanear codigo QR</string>
    <string name="tut_audio">Reproduce la audioguia</string>
    <string name="showMore">Mostrar Respuesta</string>
    <string name="showLess">Ocultar Respuesta</string>
    <string name="tut_marcador_desc">Estos marcadores son cada una de las zonas visitables del yacimiento de Pintia. Pinchando sobre ellos te lleva a cada una de las secciones.</string>
    <string name="tut_leyenda_desc">Pulsando sobre este boton se despliega la leyenda con la que poder acceder a los mismo puntos visitables del yacimiento.</string>
    <string name="tut_my_ubi_desc">Una vez que te sale el mensaje de que tu ubicacion se ha cargado, pulsando sobre este boton accedes a tu ubicacion en tiempo real.</string>
    <string name="tut_focus_desc">Pulsando sobre este boton vuelves a centra el foco del mapa sobre el yacimiento en caso de haberte desplazado por el mapa.</string>
    <string name="tut_como_llegar_desc">Pulsando sobre el boton te permite abrir tu maps y encontrar la ruta para llegar al yacimiento.</string>
    <string name="tut_camara_desc">A modo de funcionalidad extra la aplicacion te permite sacarte una fotografia y mostrarte en el lugar que se tomo sobre el mapa, ademas de mostrarte dichas fotos en la seccion de Galeria.</string>
    <string name="tut_qr_desc">Al hacer chick sobre este boton podras escanear los codigos qr que hay repartidos por el cementerio en algunas de sus tablas de informacion.</string>
    <string name="tut_audio_desc">Al hacer clich sobre el boton comenzara la reproduccion de la audio-guia, pudiendo pararla y continuar cuando se quiera.</string>

    <string-array name="audio_speeds">
        <item>0.5x</item>
        <item>0.75x</item>
        <item>1x</item> <!-- Velocidad normal -->
        <item>1.25x</item>
        <item>1.5x</item>
        <item>2x</item>
    </string-array>

    <string name="title_setting_language">Idioma</string>
    <string name="title_setting_font_size">Tamaño de letra</string>
    <string name="title_setting_dark_mode">Modo Oscuro</string>
</resources>