<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="language"
        android:title="@string/title_setting_language"
        android:summary="%s"
        android:entries="@array/language_entries"
        android:entryValues="@array/language_values"
        android:defaultValue="es" />

    <ListPreference
        android:key="font_size"
        android:title="@string/title_setting_font_size"
        android:summary="%s"
        android:entries="@array/font_size_entries"
        android:entryValues="@array/font_size_values"
        android:defaultValue="medium" />

    <SwitchPreferenceCompat
        android:key="dark_mode"
        android:title="@string/title_setting_dark_mode"
        android:defaultValue="false" />
</PreferenceScreen>