<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo_principal" />

    <!-- GridLayout con 2x2 -->
    <GridLayout
        android:id="@+id/buttonGrid"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:columnCount="2"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"
        android:layout_alignParentTop="true">

        <!-- Botón 1 -->
        <LinearLayout
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/rounded_transp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/button1_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/quinanas"
                android:src="@drawable/ciudad" />

            <TextView
                android:id="@+id/button1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/quinanas"
                android:textColor="@color/on_primary"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Botón 2 -->
        <LinearLayout
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/rounded_transp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/button2_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/muralla"
                android:src="@drawable/defensa" />

            <TextView
                android:id="@+id/button2_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/muralla"
                android:textColor="@color/on_primary"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Botón 3 -->
        <LinearLayout
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/rounded_transp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/button3_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/ruedas"
                android:src="@drawable/cementerio" />

            <TextView
                android:id="@+id/button3_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/ruedas"
                android:textColor="@color/on_primary"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Botón 4 -->
        <LinearLayout
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/rounded_transp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/button4_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/titulo_principal"
                android:src="@drawable/uva" />

            <TextView
                android:id="@+id/button4_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/titulo_principal"
                android:textColor="@color/on_primary"
                android:textSize="14sp" />
        </LinearLayout>

    </GridLayout>

    <!-- Botón de reserva centrado -->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/reserva_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/rounded"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <ImageButton
                android:id="@+id/button_reserva"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/round_button_background"
                android:scaleType="fitCenter"
                android:src="@drawable/request" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reservaAhora"
                android:textColor="@color/on_secondary" />
        </LinearLayout>
    </FrameLayout>

</RelativeLayout>

