<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.example.pintia.components.Header
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <com.example.pintia.components.Footer
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="100dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@drawable/rounded"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/rounded">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="6">

                        <TextView
                            android:id="@+id/description_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="5"
                            android:text="@string/description"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:textColor="@color/white" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="13dp">

                            <ImageButton
                                android:id="@+id/audio_player"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_weight="1"
                                android:background="@drawable/round_button_background"
                                android:src="@drawable/audio" />
                        </LinearLayout>
                    </LinearLayout>
                </FrameLayout>

                <View
                    android:id="@+id/divider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/description_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:text="@string/description_content"
                    android:textColor="@color/white" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/rounded">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/MoreInfo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/more_info_title"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </FrameLayout>

                <View
                    android:id="@+id/divider_section_2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/more_info_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:text="@string/description_content"
                    android:textColor="@color/white" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/rounded">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/challenges_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/challenges_title"
                            android:textAppearance="@style/TextAppearance.AppCompat.Title"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </FrameLayout>

                <View
                    android:id="@+id/divider_section_3"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider" />

                <TextView
                    android:id="@+id/challenges_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="6dp"
                    android:text="@string/challenges_content"
                    android:textColor="@color/white" />
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</RelativeLayout>